fixed logo size on mobile scroll

--- a/style.css
+++ b/style.css
@@ -93,6 +93,9 @@ body {
     #logo {
         width: 150px;
     }
+    #logo.affix-logo {
+        width: 50px;
+    }
 }
 
 /* HERO */
